# zalmani

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  README.md  package.xml
launch/: ur10_3f_dice.launch  ur10_3f_empty.launch  ur10e-2f_85.launch  ur10e_2f85.launch  ur10e_3f-gripper.launch  ur10e_3f-gripper_without_world.launch  ur10e_3f.launch
launch/inc/: controller_utils.launch.xml  controller_utils_2f.launch.xml  load_ur10e_with_2f.launch.xml  load_ur10e_with_3f.launch.xml  load_ur_with_2f.launch.xml  load_ur_with_2f85.launch.xml  load_ur_with_3f.launch.xml  ur_control_without_world.launch.xml
tests/: movement_benchmark_traj.py  movement_test.py
urdf/: ur10e-2f_85.xacro  ur10e_3f-gripper.xacro  ur10e_3f_gripper_init.xacro  ur_3f.xacro
worlds/: dice.world  empty_new.world
zalmani/: CMakeLists.txt  package.xml
zalmani_commander/: CMakeLists.txt  package.xml  setup.py
zalmani_commander/scripts/: commander
zalmani_commander/src/zalmani_commander/: controller_manager.py  robots.py  utils.py
zalmani_control/: CMakeLists.txt  package.xml
zalmani_control/src/zalmani_commander/: robots.py
zalmani_description/: CMakeLists.txt  README.md  package.xml
zalmani_description/urdf/: ur10e_2f85.xacro  ur10e_3f.xacro  ur16e_2f85.xacro  ur16e_3f.xacro  ur3e_2f85.xacro  ur3e_3f.xacro  ur5e_2f85.xacro  ur5e_3f.xacro
zalmani_description/urdf/inc/: ur_2f_macro.xacro  ur_3f_macro.xacro
zalmani_gazebo/: CMakeLists.txt  package.xml
zalmani_gazebo/launch/: ur10e_2f85.launch  ur10e_3f.launch
zalmani_gazebo/launch/inc/: controller_utils_3f.launch.xml  load_ur_with_2f85.launch.xml  load_ur_with_3f.launch.xml
zalmani_gazebo/urdf/: ur_2f85.xacro  ur_3f.xacro
