<?xml version="1.0"?>
<package format="2">
  <name>zalmani</name>
  <version>1.0.0</version>
  <description>
    Support and wrapper for manipulators used by ZAL (metapackage).
  </description>

  <author>Stephan Rediske</author>
  <maintainer email="stephan.rediske@zal.aero">Stephan Rediske</maintainer>

  <license>BSD</license>

  <url type="website">https://zal.aero/</url>
  <url type="repository">https://github.com/srediske/zalmani</url>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>zalmani_commander</exec_depend>
  <exec_depend>zalmani_description</exec_depend>
  <exec_depend>zalmani_gazebo</exec_depend>

  <export>
    <metapackage/>
    <architecture_independent/>
  </export>
</package>
