<?xml version="1.0"?>
<package format="2">
  <name>zalmani_commander</name>
  <version>1.0.0</version>
  <description>
    Python modules for creating ActionClients to control the robots via the rospy ActionServer.
  </description>

  <author>Stephan Rediske</author>
  <maintainer email="stephan.rediske@zal.aero">Stephan Rediske</maintainer>

  <license>BSD</license>

  <url type="website">https://zal.aero/</url>
  <url type="repository">https://gitlab.zal.aero/stephan.rediske/zalmani_commander</url>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>python3-catkin-pkg</buildtool_depend>

  <depend>rospy</depend>

  <export>
  </export>
</package>
