<?xml version="1.0"?>
<package format="2">
  <name>zalmani_gazebo</name>
  <version>1.0.0</version>
  <description>
    Gazebo wrapper for Universal Robots arms with Robotiq end effectors.
  </description>

  <author>Stephan Rediske</author>
  <maintainer email="stephan.rediske@zal.aero">Stephan Rediske</maintainer>

  <license>BSD</license>

  <url type="website">https://zal.aero/</url>
  <url type="repository">https://github.com/srediske/zalmani_gazebo</url>

  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>roslaunch</test_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>robotiq_gazebo</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>robotiq_2f_description</exec_depend>
  <exec_depend>robotiq_3f_description</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>ur_gazebo</exec_depend>

  <export>
  </export>
</package>
